# noauth

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.release  README.md  default.noauth.toml  healthcheck.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: code-quality-check.yml  publish.yml  tests.yml
demo/: demo.noauth.toml  docker-compose.yml
noauth/: __init__.py  config.py  dependencies.py  jwt.py  main.py  manual.py  models.py  oidc.py  store.py
noauth/templates/: __init__.py  copy_button.html  id_entry.html  public.html  token_complete.html  token_entry.html
static/: public.css  token.css  user_info.css
tests/: test_noop.py
