[project]
name = "noauth"
version = "0.2.3"
description = "NoAuth"
authors = [
    {name = "Daniel Bluhm", email = "dbluhm@pm.me"},
]
dependencies = [
    "fastapi>=0.111.0",
    "Jinja2>=3.1.4",
    "aries-askar>=0.3.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-ruff>=0.1.1",
    "pre-commit>=3.5.0",
    "ruff>=0.4.9",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
line-length = 90
extend-exclude = ["example*.py"]

[tool.ruff.lint]
select = ["E", "F", "C", "D", "TID"]
ignore = [
    # Google Python Doc Style
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413",
    "D202", # Allow blank line after docstring
]
per-file-ignores = {"**/{tests}/*" = ["F841", "D", "E501"]}

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@abstract"]
precision = 2
show_missing = true

[tool.coverage.run]
branch = true
